# hdl_runner

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: adder.v  adder.vhd  common.py  test_verilog.py  test_vhdl.py
examples/ghdl/: test_adder_ghdl_amaranth.py  test_adder_ghdl_vhdl.py
examples/icarus/: test_adder_icarus_amaranth.py  test_adder_icarus_verilog.py
examples/nvc/: test_adder_nvc_amaranth.py  test_adder_nvc_vhdl.py
examples/verilator/: test_adder_verilator_amaranth.py  test_adder_verilator_verilog.py
hdl_runner/: __init__.py  _error_handler.py  _test_wrapper.py  _timeout_handler.py  backend.py  runner.py  sim.py  timeout_handler.py  utils.py
